--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -2,6 +2,22 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scrollbar-width: thin;
+  scrollbar-color: #6f6f6f rgba(191, 191, 191, 0.55);
+}
+
+*::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+*::-webkit-scrollbar-track {
+  background-color: rgba(191, 191, 191, 0.55);
+}
+
+*::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 6px rgba(191, 191, 191, 0.55);
+  background-color: #6f6f6f;
 }
 
 html,
@@ -204,6 +220,7 @@ footer {
   overflow-y: auto;
   overflow-x: hidden;
   padding: 10px 5px;
+  width: 100%;
 }
 
 .line-number {
